fixed alignment of strong and text color of heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,13 @@ html {
 	background: url(../images/background_space.jpg);
 }
 
+h1 {
+	color: LightSlateGray;
+}
+
+#rowOfStones {
+}
+
 .stone {
-	width: 16%;
+	width: 16.4%;
 }
